# crimpdeq-firmware

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  partition.csv  partitions.csv  rust-toolchain.toml  taplo.toml
.cargo/: config.toml
.cursor/rules/: rust-verification.mdc
.github/: FUNDING.yml
.github/workflows/: book.ci.yml  book_ci.yml  release.yml  rust_ci.yml
book/: book.toml
book/src/: SUMMARY.md  assembly.md  battery.md  calibration.md  firmware.md  introduction.md  pcb.md
hardware/crimpdeq/: #auto_saved_files#  crimpdeq.kicad_pcb  crimpdeq.kicad_prl  crimpdeq.kicad_pro  crimpdeq.kicad_sch  fp-info-cache  ~crimpdeq.kicad_pcb.lck
hardware/crimpdeq/production/gerber/: crimpdeq-B_Cu.gbr  crimpdeq-B_Mask.gbr  crimpdeq-B_Paste.gbr  crimpdeq-B_Silkscreen.gbr  crimpdeq-Edge_Cuts.gbr  crimpdeq-F_Cu.gbr  crimpdeq-F_Mask.gbr  crimpdeq-F_Paste.gbr  crimpdeq-F_Silkscreen.gbr  crimpdeq-NPTH.drl  crimpdeq-PTH.drl  crimpdeq-job.gbrjob
src/: ble.rs  hx711.rs  lib.rs  main.rs  progressor.rs
