[package]
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "crimpdeq"
version = "0.1.0"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bt-hci = { version = "0.3.2", features = ["defmt"] }
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "task-arena-size-20480",
] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-storage = "0.3.1"
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "defmt",
    "esp32c3",
    "unstable",
] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c3"] }
esp-println = { version = "0.15.0", features = ["esp32c3"] }
esp-storage = { version = "0.7.0", features = ["esp32c3"] }
esp-wifi = { version = "0.15.0", default-features = false, features = [
    "ble",
    "builtin-scheduler",
    "defmt",
    "esp-alloc",
    "esp32c3",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
static_cell = "2.1.1"
trouble-host = { version = "0.2.4", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "cb4b2cd424cdb2af54bad52922798a58d8786d7f" }
