[package]
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "crimpdeq"
version = "0.1.0"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bt-hci = { version = "0.6.0", features = ["defmt"] }
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-storage = "0.3.1"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", package = "esp-alloc", rev = "4ee4d73", features = [
    "defmt",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", package = "esp-bootloader-esp-idf", rev = "4ee4d73", features = [
    "esp32c3",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal", rev = "4ee4d73", features = [
    "defmt",
    "esp32c3",
    "unstable",
] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", package = "esp-radio", rev = "4ee4d73", features = [
    "ble",
    "defmt",
    "esp-alloc",
    "esp32c3",
    "unstable",
] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", package = "esp-rtos", rev = "4ee4d73", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32c3",

] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal", package = "esp-storage", rev = "4ee4d73", features = [
    "defmt",
    "esp32c3",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"
trouble-host = { version = "0.4.0", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
