[package]
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "crimpdeq"
version = "0.2.2"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bt-hci = { version = "0.6.0", features = ["defmt"] }
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-storage = "0.3.1"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
esp-radio = { version = "0.17.0", features = [
    "ble",
    "defmt",
    "esp-alloc",
    "esp32c3",
    "unstable",
] }
esp-rtos = { version = "0.2.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32c3",

] }
esp-storage = { version = "0.8.1", features = ["defmt", "esp32c3"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
static_cell = "2.1.1"
trouble-host = { version = "0.5.1", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
